<resources>
    <string name="app_name">HouseHold Tracking System</string>
    <string name="logo">Logi</string>
    <string name="purpose">a platform which will enable collection of household data to enable easy management of household items</string>

    <string name="tracker">Tracker!</string>
    <string name="my">My</string>
    <string name="login">LOGIN</string>
    <string name="consumables">Consumables\'</string>
    <string name="new_user_sign_up">New user sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register User</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="_prompt">Choose Delivery Agent</string>
    <string name="profile_save">Edit Details</string>

    <string name="navigation_drawer_open">Open navigtion drawer</string>
    <string name="navigation_drawer_close">close navigtion drawer</string>

    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="phone_login">Phone</string>
    <string name="password_login">Password</string>
    <string name="no_data_found">No Data Found</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="full_name">Fullname</string>
    <string name="customer_register">Register As Customer</string>
    <string name="already_have_account_sign_in_here">already have account  sign in here</string>
    <string name="are_you_a_veterinary_click_here">Register As Delivery Person</string>
    <string name="are_you_a_customer_click_here">Register As Customer</string>
    <string name="login_as_a_customer_click_here">Login As Customer</string>
    <string name="login_txt">Login As Delivery Person</string>
    <string name="don_t_have_account_sign_up_here">"Don't have an account? "</string>
    <string name="log_in">Customer Login</string>
    <string name="customer_login">Customer Login</string>
</resources>
