<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".Account.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_registration"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/reg_title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/full_name"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="text"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/fullname"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/phone_number"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/phone_number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:hint="@string/password"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/password_reg"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/confirm_password"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/password_confm"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/customer_register"
        android:background="@drawable/buttons"
        android:padding="6dp"
        android:textColor="@android:color/white"
        android:id="@+id/btn_reg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/already_have_account_sign_in_here"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="19sp"
        android:id="@+id/signin_txt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/are_you_a_veterinary_click_here"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textSize="19sp"
        android:id="@+id/vendor_txt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/are_you_a_customer_click_here"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textSize="19sp"
        android:id="@+id/customer_txt"
        android:visibility="invisible"
        />



</LinearLayout>